[project]
name = "PraisonAI"
dynamic = ["version"]
description = "PraisonAI is an AI Agents Framework with Self Reflection. PraisonAI application combines PraisonAI Agents, AutoGen, and CrewAI into a low-code solution for building and managing multi-agent LLM systems, focusing on simplicity, customisation, and efficient human-agent collaboration."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Mervin Praison" }
]
dependencies = [
    "rich>=13.7",
    "markdown>=3.5",
    "pyparsing>=3.0.0",
    "praisonaiagents>=1.6.36",
    "python-dotenv>=0.19.0",
    "litellm>=1.81.0,<=1.82.6",
    "PyYAML>=6.0",
    "mcp>=1.20.0",
    "typer>=0.9.0",
    "textual>=0.47.0",
]

[project.scripts]
praisonai = "praisonai.__main__:main"
setup-conda-env = "praisonai.setup.setup_conda_env:main"
praisonai-call = "praisonai.api.call:main"

[project.optional-dependencies]
ui = [
    "aiui>=0.3.100",
]
gradio = ["gradio>=4.26.0"]
api = [
    "flask>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=1.6.0"
]
os = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "PyJWT>=2.8.0",
    "sse-starlette>=1.6.0"
]
agentops = ["agentops>=0.3.12"]
langfuse = ["langfuse>=3.0.0"]
langextract = ["langextract>=1.0.0"]
chat = [
    "aiui>=0.3.100",
    "tavily-python==0.5.0",
    "crawl4ai>=0.7.0",
    "playwright>=1.47.0",
    "rich"
]
code = [
    "aiui>=0.3.100",
    "tavily-python==0.5.0",
    "crawl4ai>=0.7.0",
    "playwright>=1.47.0"
]
sandbox = [
    "sandlock>=0.1.0",
]
ssh = [
    "asyncssh>=2.14.0",
]
modal = [
    "modal>=0.64.0",
]
daytona = [
    # Note: daytona package not yet available on PyPI
    # Install via: pip install git+https://github.com/daytonaio/daytona-python
]
realtime = [
    "aiui>=0.3.100",
    "tavily-python==0.5.0",
    "crawl4ai>=0.7.0",
    "playwright>=1.47.0",    # required by crawl4ai — browsers still need: playwright install chromium
    "websockets>=12.0",
    "plotly>=5.24.0",
    "yfinance>=0.2.44",
    "ddgs>=9.0.0",
]
call = [
    "twilio>=7.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "websockets>=12.0",
    "flaml[automl]>=2.3.1",
    "pyngrok>=1.4.0",
    "rich"
]
train = []
crewai = ["crewai>=0.157.0", "praisonai-tools>=0.1.0"]
autogen = ["pyautogen==0.2.29", "praisonai-tools>=0.1.0", "crewai"]
ag2 = ["ag2>=0.11.0", "praisonai-tools>=0.1.0"]
autogen-v4 = [
    "autogen-agentchat>=0.4.0", 
    "autogen-ext[openai]>=0.4.0", 
    "autogen-core>=0.4.0",
    "praisonai-tools>=0.1.0", 
    "crewai"
]
acp = [
    "agent-client-protocol>=0.7.0",
]
lite = [
    # Minimal installation without TUI, litellm - just core agent functionality
    # Use: pip install praisonai[lite] for lightweight deployments
]
all = [
    # Full installation — trimmed to what `praisonai onboard` + gateway + core
    # agent loops actually need out of the box. Heavy UI/science/telemetry
    # stacks live in their own extras (`[ui]`, `[gradio]`, `[realtime]`,
    # `[observability]`) so the default install stays lean and every
    # messaging bot the onboarding wizard offers runs without a second
    # `pip install`.
    # Gateway / web surface
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=1.6.0",
    "websockets>=12.0",
    # Browser + search tools (agent defaults)
    "tavily-python==0.5.0",
    "crawl4ai>=0.7.0",
    "playwright>=1.47.0",
    "ddgs>=9.0.0",
    "psutil>=5.9.0",  # Shell tools
    # Messaging bot SDKs — required by `praisonai onboard` (Telegram, Discord,
    # Slack, WhatsApp Cloud). Kept in sync with the [bot] extra below.
    "python-telegram-bot>=20.0",
    "discord.py>=2.0.0",
    "slack_sdk>=3.0.0",
    "slack-bolt>=1.18.0",
    "brotlicffi>=1.0.0",
    "aiohttp>=3.8.0",
    "aiui>=0.3.100",  # PraisonAI UI — dashboard + chat for onboarded bots
    # Storage backends
    "redis>=5.0.0",
    "pymongo>=4.6.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.35.0",
    # n8n integration
    "httpx>=0.27.0",
]
observability = [
    # Telemetry stack (Langfuse + transitive OpenTelemetry instrumentations).
    # Opt-in because it pulls 40+ packages. For back-compat the existing
    # [langfuse] extra (declared above) remains as an alias.
    "langfuse>=3.0.0",
]
bot = [
    # Dependencies for Telegram, Discord, Slack, and WhatsApp bots
    "python-telegram-bot>=20.0",
    "discord.py>=2.0.0",
    "slack_sdk>=3.0.0",
    "slack-bolt>=1.18.0",
    "brotlicffi>=1.0.0",
    "aiohttp>=3.8.0",
    "aiui>=0.3.100",  # PraisonAI UI — dashboard + chat for onboarded bots
    "ddgs>=9.0.0",  # DuckDuckGo search for agent web tools
    "psutil>=5.9.0",  # Shell tools (execute_command, list_processes, get_system_info)
]
bot-whatsapp-web = [
    # WhatsApp Web mode (experimental, token-free via QR scan)
    "neonize>=0.3.14",
    "qrcode>=7.0",
]
# Storage backend dependencies
redis = [
    "redis>=5.0.0",
]
mongodb = [
    "pymongo>=4.6.0",
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
dynamodb = [
    "boto3>=1.35.0",
]
# Cloud-native serverless databases
neon = [
    "psycopg2-binary>=2.9.0",
]
turso = [
    "libsql-experimental>=0.0.50",
]
cockroachdb = [
    "psycopg2-binary>=2.9.0",
]
xata = [
    "psycopg2-binary>=2.9.0",
]
claw = [
    # PraisonAI 🦞 — Full dashboard + bots + memory + knowledge + gateway
    # Install: pip install "praisonai[claw]"
    "aiui[all]>=0.3.100",
    "praisonaiagents[all]>=1.5.40",
    # UI + persistence
    "flask>=3.0.0",
    # Gateway
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=1.6.0",
    # Search + browsing
    "tavily-python==0.5.0",
    "crawl4ai>=0.7.0",
    "playwright>=1.47.0",    # required by crawl4ai — browsers still need: playwright install chromium
    "websockets>=12.0",
    "ddgs>=9.0.0",
    # Shell tools
    "psutil>=5.9.0",
    # Observability
    "langfuse>=3.0.0",
    # Bot channels (Telegram, Discord, Slack)
    "python-telegram-bot>=20.0",
    "discord.py>=2.0.0",
    "slack_sdk>=3.0.0",
    "slack-bolt>=1.18.0",
    "brotlicffi>=1.0.0",
    "aiohttp>=3.8.0",
    # Storage backends
    "redis>=5.0.0",
    "pymongo>=4.6.0", 
    "psycopg2-binary>=2.9.0",
    "boto3>=1.35.0",
    # n8n integration
    "httpx>=0.27.0",
]
n8n = [
    "httpx>=0.27.0",
]
dev = [
    "textual-dev>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI"

[tool.uv.sources]
praisonaiagents = { path = "../praisonai-agents" }

[tool.uv]
# Exclude from lock resolution — these cause cross-extra conflicts that
# never occur at install time (nobody installs [claw]+[autogen]+[crewai] together):
#   neonize:        conflicts with autogen-core (protobuf version)
#   magika:         numpy>=2.1 (via markitdown) vs pyautogen numpy<2
#   neo4j-graphrag: json-repair tight pins vs crewai transitive deps
override-dependencies = [
    "neonize ; sys_platform == 'never'",
    "magika ; sys_platform == 'never'",
    "neo4j-graphrag ; sys_platform == 'never'",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "praisonai.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["praisonai*"]
