[package]
name = "praisonai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for PraisonAI - Agent, Tools, Workflows"
keywords = ["ai", "agents", "llm", "tools"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# LLM providers
rig-core = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5"

# Regex for policy matching
regex = "1"

# Lazy static initialization
once_cell = "1"
lazy_static = "1"

# TOML parsing for config
toml = "0.8"

# Derive macros
praisonai-derive = { path = "../praisonai-derive", version = "0.2.0" }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
# Optional TUI support
tui = ["ratatui", "crossterm"]

[dependencies.ratatui]
version = "0.29"
optional = true

[dependencies.crossterm]
version = "0.28"
optional = true

[[example]]
name = "basic_agent"
path = "../examples/basic_agent.rs"

[[example]]
name = "with_tools"
path = "../examples/with_tools.rs"

[[example]]
name = "multi_agent"
path = "../examples/multi_agent.rs"

[[example]]
name = "memory_example"
path = "../examples/memory_example.rs"

[[example]]
name = "config_example"
path = "../examples/config_example.rs"

[[example]]
name = "workflow_patterns"
path = "../examples/workflow_patterns.rs"
