[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-framework-bridge"
version = "0.0.1"
dependencies = ["praisonaiagents"]

[tool.setuptools]
py-modules = ["my_framework_adapter"]

[project.entry-points."praisonai.framework_adapters"]
my_framework = "my_framework_adapter:MyFrameworkAdapter"
