[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathlib"
version = "0.1.0"
description = "A simple math library for testing AI code editor"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=6.0", "ruff>=0.1.0"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]